Pridana funckionalita Images to Pdf + api + preklad, a oprava predošleho prekladu Pdf to img
